src/Feeds/inner-doc.css
img {
    max-width: 100%;
    object-fit: contain;
}

video {
    max-width: 100%;
    object-fit: contain;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
}

pre {
    overflow: auto;
}

